--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,17 @@ body {
     font-size: 1.5rem;
     font-weight: 800;
 }
+
+#title-head h1{
+    font-weight: 100;
+    font-size: 2.5rem;
+}
+
+/* media queries */
+
+@media screen and (max-width: 1200px) {
+    #title-head  h1 {
+        font-weight: 100;
+        font-size: 2rem;
+    }
+}
